# base-autograder-image

./: .gitignore  Dockerfile  README.md  stack.yaml
.github/workflows/: deploy.yaml
.stack-work/: stack.sqlite3
dummy-package/: CHANGELOG.md  README.md  dummy-package.cabal  stack.yaml
