cabal-version:       2.2

name:                dummy-package
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dummy-package#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Lucas Ellenberger
maintainer:          lmellenb@ucsc.edu
copyright:           2025 Lucas Ellenberger
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable dummy-package
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array,
                       base >= 4.7 && < 5,
                       clock,
                       dequeue,
                       directory,
                       elsa,
                       filepath,
                       haskeline,
                       JuicyPixels,
                       json,
                       megaparsec,
                       mtl,
                       parser-combinators,
                       process,
                       random,
                       tasty,
                       tasty-hunit,
                       text,
                       transformers,
                       vector
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
